UBUNTU: Rebase to 4.15.0-21.22
Signed-off-by: Timo Aaltonen <timo.aaltonen@canonical.com>

--- a/debian.oem/changelog
+++ b/debian.oem/changelog
@@ -4,6 +4,19 @@ linux-oem (4.15.0-1005.6) UNRELEASED; urgency=medium
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.15.0-21.22 ]
+
+  * linux: 4.15.0-21.22 -proposed tracker (LP: #1767397)
+  * initramfs-tools exception during pm.DoInstall with  do-release-upgrade from
+    16.04 to 18.04  (LP: #1766727)
+    - Add linux-image-* Breaks on s390-tools (<< 2.3.0-0ubuntu3)
+  * linux-image-4.15.0-20-generic install after upgrade from xenial breaks
+    (LP: #1767133)
+    - Packaging: Depends on linux-base that provides the necessary tools
+  * linux-image packages need to Breaks flash-kernel << 3.90ubuntu2
+    (LP: #1766629)
+    - linux-image-* breaks on flash-kernel (<< 3.90ubuntu2)
+
  -- Timo Aaltonen <timo.aaltonen@canonical.com>  Tue, 08 May 2018 10:35:23 +0300
 
 linux-oem (4.15.0-1004.5) bionic; urgency=medium
