--- a/debian.oem/changelog
+++ b/debian.oem/changelog
@@ -4,6 +4,40 @@ linux-oem (4.15.0-1010.13) UNRELEASED; urgency=medium
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.15.0-26.28 ]
+
+  * linux: 4.15.0-26.28 -proposed tracker (LP: #1780112)
+  * failure to boot with linux-image-4.15.0-24-generic (LP: #1779827) // Cloud-
+    init causes potentially huge boot delays with 4.15 kernels (LP: #1780062)
+    - random: Make getrandom() ready earlier
+
+  [ Ubuntu: 4.15.0-25.27 ]
+
+  * linux: 4.15.0-25.27 -proposed tracker (LP: #1779354)
+  * hisi_sas_v3_hw: internal task abort: timeout and not done. (LP: #1777736)
+    - scsi: hisi_sas: Update a couple of register settings for v3 hw
+  * hisi_sas: Add missing PHY spinlock init (LP: #1777734)
+    - scsi: hisi_sas: Add missing PHY spinlock init
+  * hisi_sas: improve read performance by pre-allocating slot DMA buffers
+    (LP: #1777727)
+    - scsi: hisi_sas: use dma_zalloc_coherent()
+    - scsi: hisi_sas: Use dmam_alloc_coherent()
+    - scsi: hisi_sas: Pre-allocate slot DMA buffers
+  * hisi_sas: Failures during host reset (LP: #1777696)
+    - scsi: hisi_sas: Only process broadcast change in phy_bcast_v3_hw()
+    - scsi: hisi_sas: Fix the conflict between dev gone and host reset
+    - scsi: hisi_sas: Adjust task reject period during host reset
+    - scsi: hisi_sas: Add a flag to filter PHY events during reset
+    - scsi: hisi_sas: Release all remaining resources in clear nexus ha
+  * Fake SAS addresses for SATA disks on HiSilicon D05 are non-unique
+    (LP: #1776750)
+    - scsi: hisi_sas: make SAS address of SATA disks unique
+  * Vcs-Git header on bionic linux source package points to zesty git tree
+    (LP: #1766055)
+    - [Packaging]: Update Vcs-Git
+  * large KVM instances run out of IRQ routes (LP: #1778261)
+    - SAUCE: kvm -- increase KVM_MAX_IRQ_ROUTES to 2048 on x86
+
  -- Timo Aaltonen <timo.aaltonen@canonical.com>  Tue, 03 Jul 2018 10:27:53 +0300
 
 linux-oem (4.15.0-1009.12) bionic; urgency=medium
