--- a/debian.oem/changelog
+++ b/debian.oem/changelog
@@ -4,6 +4,21 @@ linux-oem (4.15.0-1011.14) UNRELEASED; urgency=medium
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.15.0-28.30 ]
+
+  * linux: 4.15.0-28.30 -proposed tracker (LP: #1781433)
+  * Cannot set MTU higher than 1500 in Xen instance (LP: #1781413)
+    - xen-netfront: Fix mismatched rtnl_unlock
+    - xen-netfront: Update features after registering netdev
+
+  [ Ubuntu: 4.15.0-27.29 ]
+
+  * linux: 4.15.0-27.29 -proposed tracker (LP: #1781062)
+  * [Regression] EXT4-fs error (device sda1): ext4_validate_inode_bitmap:99:
+    comm stress-ng: Corrupt inode bitmap (LP: #1780137)
+    - SAUCE: ext4: fix ext4_validate_inode_bitmap: comm stress-ng: Corrupt inode
+      bitmap
+
  -- Timo Aaltonen <timo.aaltonen@canonical.com>  Mon, 16 Jul 2018 11:17:01 +0300
 
 linux-oem (4.15.0-1010.13) bionic; urgency=medium
